<resources>
    <string name="app_name">PhotoBomb</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="email">photoeditor@app.com</string>
    <string name="your_web_client_id">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</string>
    <string name="title_activity_photo_edit">PhotoEditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_gallery_is_empty_start_adding_images">Your gallery is empty. Start adding images!</string>
    <string name="gallery_image">Gallery Image</string>
    <string name="add_image">Add image</string>
    <string name="more">more</string>
    <string name="delete_collection">Delete Collection</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="none">NONE</string>
    <string name="delete_selection">Delete Selection</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="gender">Gender</string>
    <string name="delete_account">Delete Account</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_now">Already have an account? Login now!</string>
    <string name="password">Password</string>
    <string name="registerTitle">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="feminine">Feminine</string>
    <string name="masculine">Masculine</string>
    <string name="other">Other</string>
    <string name="last_name">Last Name</string>
    <string name="emailText">Email</string>
    <string name="username2">Username</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="move">Move</string>
    <string name="save">Save</string>
    <string name="login">LOGIN</string>
    <string name="email2">Email</string>
    <string name="no_account_register">No Account? Register</string>
    <string name="at_least_8_characters_long">At least 8 characters long</string>
    <string name="at_least_one_uppercase_letter">At least one uppercase letter</string>
    <string name="at_least_one_number">At least one number</string>
    <string name="at_least_one_special_character">At least one special character</string>
    <string name="at_least_one_special_character2">At least one special character(!@#$%^*.)</string>
</resources>